# zorse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  stack.py  upload.py
ingestion/: __init__.py  bigquery.py  stack.py
processing/: __init__.py  filters.py  licenses.py
scripts/: __init__.py  build_dataset.py
tests/: __init__.py  conftest.py  test_bigquery_ingestion.py  test_build_dataset.py  test_filters.py  test_stack_ingestion.py  test_upload.py
