[project]
name = "zorse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.77",
    "datasets>=3.1.0",
    "google-cloud-bigquery>=3.39.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "smart-open>=7.0.5",
    "transformers>=4.47.0",
]
